# flowflow_python

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/: LICENSE  example.py  setup.py
src/flowflow/: __init__.py  example.py
