[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flowflow"
version = "0.0.1"
authors = [{name = "Mick Vermaat", email = "support@flowflow.ai"}]
description = "Flowflow.AI Client"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls] 
"Homepage" = "https://flowflow.ai"
"API Docs" = "https://documentation.flowflow.ai/?python#api-reference"